public/assets/css/Trainer/mobileInnerstyle.css
/* ... */
  .workout_main_container:focus, .client_main_container:focus, .workout_main_container:active, .client_main_container:active {
    -webkit-transform: translateY(2px);
    -moz-transform: translateY(2px);
    -ms-transform: translateY(2px);
    -o-transform: translateY(2px);
    transform: translateY(2px); }
  .workout_main_container .deleting, .client_main_container .deleting {
    z-index: 4;
    width: 100%;
    height: 230px;
    position: absolute;
    background-color: #52D2B0;
    top: -240px;
    -webkit-transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
    -moz-transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
    transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
    .workout_main_container .deleting img, .client_main_container .deleting img {
      display: block;
      margin: auto auto;
      height: 80%; }
    .workout_main_container .deleting .deletingMessage, .client_main_container .deleting .deletingMessage {
      color: #fff;
      text-align: center; }
  .workout_main_container .workoutsHover, .client_main_container .workoutsHover, .client_main_container .clientsHover {
    z-index: 4;
    width: 100%;
    height: 230px;
    position: absolute;
    background-color: #52D2B0;
    top: -240px;
    -webkit-transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
    -moz-transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
    transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
    display: -webkit-box;
    display: -moz-box;
    display: box;
    display: -webkit-flex;
    display: -moz-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -moz-box-orient: vertical;
    box-orient: vertical;
    -webkit-box-direction: normal;
    -moz-box-direction: normal;
    box-direction: normal;
    -webkit-flex-direction: column;
    -moz-flex-direction: column;
    flex-direction: column;
    -ms-flex-direction: column;
    -webkit-align-content: space-between;
    -moz-align-content: space-between;
    align-content: space-between;
    -ms-flex-line-pack: justify; }
    .workout_main_container .workoutsHover .hoverExit, .client_main_container .workoutsHover .hoverExit, .client_main_container .clientsHover .hoverExit {
      margin: 12px;
      position: absolute;
      right: 0;
      top: 0; }
      @media (min-width: 768px) {
        .workout_main_container .workoutsHover .hoverExit, .client_main_container .workoutsHover .hoverExit, .client_main_container .clientsHover .hoverExit {
          display: none; } }
    @media all and (min-width: 768px) {
      html.no-touchevents .workout_main_container .workoutsHover .hoverExit, html.no-touchevents .client_main_container .workoutsHover .hoverExit, .client_main_container html.no-touchevents .workout_main_container .clientsHover .hoverExit, html.no-touchevents .client_main_container .clientsHover .hoverExit {
        display: none; } }
    .workout_main_container .workoutsHover_status, .client_main_container .workoutsHover_status {
      text-align: center;
      height: 140px;
      display: -webkit-box;
      display: -moz-box;
      display: box;
      display: -webkit-flex;
      display: -moz-flex;
      display: -ms-flexbox;
      display: flex;
      -webkit-box-orient: vertical;
      -moz-box-orient: vertical;
      box-orient: vertical;
      -webkit-box-direction: normal;
      -moz-box-direction: normal;
      box-direction: normal;
      -webkit-flex-direction: column;
      -moz-flex-direction: column;
      flex-direction: column;
      -ms-flex-direction: column;
      -webkit-box-pack: distribute;
      -moz-box-pack: distribute;
      box-pack: distribute;
      -webkit-justify-content: space-around;
      -moz-justify-content: space-around;
      -ms-justify-content: space-around;
      -o-justify-content: space-around;
      justify-content: space-around;
      -ms-flex-pack: distribute; }
      #w_clients .workout_main_container .workoutsHover_status, #w_clients .client_main_container .workoutsHover_status {
        background-color: #2C3E50; }
      .workout_main_container .workoutsHover_status p, .client_main_container .workoutsHover_status p {
        color: #fff;
        font-size: 1.5em;
        padding: 0;
        margin-top: auto; }
      .workout_main_container .workoutsHover_status a, .client_main_container .workoutsHover_status a {
        color: #fff;
        font-size: 1em;
        padding: 9px 15px;
        border: 1px solid #fff;
        border-radius: 2px;
        margin: 20px auto auto auto;
        display: inline-block;
        width: 170px;
        -webkit-transition: all 0.3s;
        -moz-transition: all 0.3s;
        transition: all 0.3s; }
        .workout_main_container .workoutsHover_status a:hover, .client_main_container .workoutsHover_status a:hover {
          background-color: #fff;
          color: #52D2B0; }
    .workout_main_container .workoutsHover_BTNsContainer, .client_main_container .workoutsHover_BTNsContainer, .workout_main_container .clientsHover_BTNsContainer, .client_main_container .clientsHover_BTNsContainer {
      height: 90px;
      margin-top: auto;
      display: -webkit-box;
      display: -moz-box;
      display: box;
      display: -webkit-flex;
      display: -moz-flex;
      display: -ms-flexbox;
      display: flex;
      box-shadow: 0 0px -4px 10px 0px rgba(0, 0, 0, 0.2) 0px -4px 10px 0px rgba(0, 0, 0, 0.2) 0 rgba(0, 0, 0, 0.36), 0 0 0px -4px 10px 0px rgba(0, 0, 0, 0.2) 0 rgba(0, 0, 0, 0.24); }
      .workout_main_container .workoutsHover_BTNsContainer a, .client_main_container .workoutsHover_BTNsContainer a, .workout_main_container .clientsHover_BTNsContainer a, .client_main_container .clientsHover_BTNsContainer a {
        width: 100%;
        height: 90px; }
/* ... */

